--- a/app.json
+++ b/app.json
@@ -1,38 +1,41 @@
 {
   "expo": {
-    "name": "my-expo-app",
+    "name": "Bloom Budget (beta)",
     "slug": "my-expo-app",
-    "version": "1.0.0",
-
+    "version": "7.0.0",
     "web": {
-      "favicon": "./assets/favicon.png"
+      "favicon": "./assets/Logo.png"
     },
-
     "experiments": {
       "tsconfigPaths": true
     },
-
     "plugins": [],
-
     "orientation": "portrait",
-    "icon": "./assets/icon.png",
-
+    "icon": "./assets/Logo.png",
     "userInterfaceStyle": "light",
-
     "splash": {
-      "image": "./assets/splash.png",
+      "image": "./assets/Logo.png",
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
-    "assetBundlePatterns": ["**/*"],
+    "assetBundlePatterns": [
+      "**/*"
+    ],
     "ios": {
       "supportsTablet": true
     },
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": "./assets/adaptive-icon.png",
+        "foregroundImage": "./assets/Logo.png",
         "backgroundColor": "#ffffff"
+      },
+      "package": "com.jay7.bloombudget"
+    },
+    "extra": {
+      "eas": {
+        "projectId": "7196abdb-1bc1-4070-b666-d0053997cee7"
       }
-    }
+    },
+    "owner": "jay77"
   }
 }
