--- a/package.json
+++ b/package.json
@@ -11,23 +11,23 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-google-signin/google-signin": "^13.2.0",
     "@react-navigation/native": "^7.0.19",
     "@react-navigation/native-stack": "^7.3.3",
-    "expo": "^52.0.40",
+    "expo": "^52.0.41",
     "expo-auth-session": "^6.0.3",
-    "expo-firebase-recaptcha": "^2.3.1",
+    "expo-sqlite": "^15.1.3",
     "expo-status-bar": "~2.0.1",
     "expo-web-browser": "^14.0.2",
     "firebase": "^11.5.0",
     "nativewind": "latest",
     "react": "18.3.1",
     "react-native": "0.76.7",
-    "react-native-google-signin": "^2.1.1",
     "react-native-reanimated": "3.16.2",
-    "react-native-safe-area-context": "^4.12.0",
-    "react-native-screens": "^4.10.0",
-    "react-native-webview": "^13.13.5"
+    "react-native-safe-area-context": "4.12.0",
+    "react-native-screens": "~4.4.0",
+    "react-native-webview": "13.12.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -36,6 +36,8 @@
     "@typescript-eslint/parser": "^7.7.0",
     "eslint": "^8.57.0",
     "eslint-config-universe": "^12.0.1",
+    "patch-package": "^8.0.0",
+    "postinstall-postinstall": "^2.1.0",
     "prettier": "^3.2.5",
     "prettier-plugin-tailwindcss": "^0.5.11",
     "tailwindcss": "^3.4.0",
@@ -46,5 +48,12 @@
     "root": true
   },
   "main": "node_modules/expo/AppEntry.js",
-  "private": true
+  "private": true,
+  "expo": {
+    "doctor": {
+      "reactNativeDirectoryCheck": {
+        "listUnknownPackages": false
+      }
+    }
+  }
 }
