Stable-2 (Enhance budgeting features by adding database migration for budget limits, updating UI components for better display of budget information, and improving package dependencies for compatibility.)

--- a/app.json
+++ b/app.json
@@ -29,7 +29,8 @@
         "foregroundImage": "./assets/Logo.png",
         "backgroundColor": "#ffffff"
       },
-      "package": "com.jay7.bloombudget"
+      "package": "com.jay7.bloombudget",
+      "newArchEnabled": true
     },
     "extra": {
       "eas": {
