--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "@react-navigation/bottom-tabs": "^7.3.3",
     "@react-navigation/native": "^7.0.19",
     "@react-navigation/native-stack": "^7.3.3",
-    "expo": "^52.0.41",
+    "expo": "~52.0.42",
     "expo-auth-session": "^6.0.3",
     "expo-sqlite": "^15.1.3",
     "expo-status-bar": "~2.0.1",
@@ -26,13 +26,16 @@
     "firebase": "^11.5.0",
     "nativewind": "latest",
     "react": "18.3.1",
-    "react-native": "0.76.7",
+    "react-native": "0.76.8",
     "react-native-draggable-flatlist": "^4.0.1",
     "react-native-reanimated": "3.16.2",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-webview": "13.12.5",
-    "@react-native-community/datetimepicker": "8.2.0"
+    "@react-native-community/datetimepicker": "8.2.0",
+    "react-dom": "18.3.1",
+    "react-native-web": "~0.19.13",
+    "@expo/metro-runtime": "~4.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
