--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/metro-runtime": "~4.0.1",
     "@expo/vector-icons": "^14.0.2",
     "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-community/datetimepicker": "8.2.0",
+    "@react-native-community/netinfo": "11.4.1",
     "@react-native-google-signin/google-signin": "^13.2.0",
     "@react-native-picker/picker": "2.9.0",
     "@react-navigation/bottom-tabs": "^7.3.3",
@@ -26,16 +29,14 @@
     "firebase": "^11.5.0",
     "nativewind": "latest",
     "react": "18.3.1",
+    "react-dom": "18.3.1",
     "react-native": "0.76.8",
     "react-native-draggable-flatlist": "^4.0.1",
     "react-native-reanimated": "3.16.2",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
-    "react-native-webview": "13.12.5",
-    "@react-native-community/datetimepicker": "8.2.0",
-    "react-dom": "18.3.1",
     "react-native-web": "~0.19.13",
-    "@expo/metro-runtime": "~4.0.1"
+    "react-native-webview": "13.12.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
