--- a/package.json
+++ b/package.json
@@ -21,22 +21,27 @@
     "@react-navigation/bottom-tabs": "^7.3.3",
     "@react-navigation/native": "^7.0.19",
     "@react-navigation/native-stack": "^7.3.3",
+    "d3-path": "^3.1.0",
+    "d3-shape": "^3.2.0",
     "expo": "~52.0.42",
     "expo-auth-session": "^6.0.3",
-    "expo-sqlite": "^15.1.3",
+    "expo-sqlite": "~15.1.4",
     "expo-status-bar": "~2.0.1",
     "expo-web-browser": "^14.0.2",
     "firebase": "^11.5.0",
     "nativewind": "latest",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "react-native": "0.76.8",
+    "react-native": "0.76.9",
+    "react-native-chart-kit": "^6.12.0",
     "react-native-draggable-flatlist": "^4.0.1",
     "react-native-reanimated": "3.16.2",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
+    "react-native-svg": "15.8.0",
     "react-native-web": "~0.19.13",
-    "react-native-webview": "13.12.5"
+    "react-native-webview": "13.12.5",
+    "victory-native": "^41.16.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
