--- a/package.json
+++ b/package.json
@@ -11,41 +11,40 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@expo/metro-runtime": "~4.0.1",
-    "@expo/vector-icons": "^14.0.2",
-    "@react-native-async-storage/async-storage": "1.23.1",
-    "@react-native-community/datetimepicker": "8.2.0",
+    "@expo/metro-runtime": "~5.0.4",
+    "@expo/vector-icons": "^14.1.0",
+    "@react-native-async-storage/async-storage": "2.1.2",
+    "@react-native-community/datetimepicker": "8.3.0",
     "@react-native-community/netinfo": "11.4.1",
     "@react-native-google-signin/google-signin": "^13.2.0",
-    "@react-native-picker/picker": "2.9.0",
+    "@react-native-picker/picker": "2.11.0",
     "@react-navigation/bottom-tabs": "^7.3.3",
     "@react-navigation/native": "^7.0.19",
     "@react-navigation/native-stack": "^7.3.3",
     "d3-path": "^3.1.0",
     "d3-shape": "^3.2.0",
-    "expo": "~52.0.46",
-    "expo-auth-session": "^6.0.3",
-    "expo-sqlite": "~15.1.4",
-    "expo-status-bar": "~2.0.1",
-    "expo-web-browser": "^14.0.2",
-    "firebase": "^11.5.0",
+    "expo": "^53.0.7",
+    "expo-auth-session": "~6.1.5",
+    "expo-sqlite": "~15.2.9",
+    "expo-status-bar": "~2.2.3",
+    "expo-web-browser": "~14.1.6",
+    "firebase": "^11.6.1",
     "nativewind": "latest",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
-    "react-native": "0.76.9",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
+    "react-native": "0.79.2",
     "react-native-chart-kit": "^6.12.0",
     "react-native-draggable-flatlist": "^4.0.1",
-    "react-native-reanimated": "3.16.2",
-    "react-native-safe-area-context": "4.12.0",
-    "react-native-screens": "~4.4.0",
-    "react-native-svg": "15.8.0",
-    "react-native-web": "~0.19.13",
-    "react-native-webview": "13.12.5",
-    "victory-native": "^41.16.2"
+    "react-native-reanimated": "~3.17.4",
+    "react-native-safe-area-context": "5.4.0",
+    "react-native-screens": "~4.10.0",
+    "react-native-svg": "15.11.2",
+    "react-native-web": "^0.20.0",
+    "react-native-webview": "13.13.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "@types/react": "~18.3.12",
+    "@types/react": "~19.0.10",
     "@typescript-eslint/eslint-plugin": "^7.7.0",
     "@typescript-eslint/parser": "^7.7.0",
     "eslint": "^8.57.0",
@@ -55,7 +54,7 @@
     "prettier": "^3.2.5",
     "prettier-plugin-tailwindcss": "^0.5.11",
     "tailwindcss": "^3.4.0",
-    "typescript": "~5.3.3"
+    "typescript": "~5.8.3"
   },
   "eslintConfig": {
     "extends": "universe/native",
