--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "d3-shape": "^3.2.0",
     "expo": "^53.0.7",
     "expo-auth-session": "~6.1.5",
+    "expo-linear-gradient": "~14.1.4",
     "expo-sqlite": "~15.2.9",
     "expo-status-bar": "~2.2.3",
     "expo-web-browser": "~14.1.6",
@@ -35,6 +36,7 @@
     "react-native": "0.79.2",
     "react-native-chart-kit": "^6.12.0",
     "react-native-draggable-flatlist": "^4.0.1",
+    "react-native-gifted-charts": "^1.4.61",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.10.0",
