--- a/package.json
+++ b/package.json
@@ -23,18 +23,18 @@
     "@react-navigation/native-stack": "^7.3.3",
     "d3-path": "^3.1.0",
     "d3-shape": "^3.2.0",
-    "expo": "^53.0.7",
+    "expo": "53.0.9",
     "expo-auth-session": "~6.1.5",
     "expo-linear-gradient": "~14.1.4",
-    "expo-sqlite": "~15.2.9",
+    "expo-sqlite": "~15.2.10",
     "expo-status-bar": "~2.2.3",
     "expo-web-browser": "~14.1.6",
     "firebase": "^11.6.1",
+    "lucide-react-native": "^0.511.0",
     "nativewind": "latest",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-native": "0.79.2",
-    "react-native-chart-kit": "^6.12.0",
     "react-native-draggable-flatlist": "^4.0.1",
     "react-native-gifted-charts": "^1.4.61",
     "react-native-reanimated": "~3.17.4",
