unsatbale UI changes

--- a/app.json
+++ b/app.json
@@ -10,7 +10,8 @@
       "tsconfigPaths": true
     },
     "plugins": [
-      "expo-sqlite"
+      "expo-sqlite",
+      "expo-font"
     ],
     "orientation": "portrait",
     "icon": "./assets/Logo.png",
