--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@expo/metro-runtime": "~5.0.4",
+    "@expo/ngrok": "^4.1.0",
     "@expo/vector-icons": "^14.1.0",
     "@react-native-async-storage/async-storage": "^2.1.2",
     "@react-native-community/datetimepicker": "8.3.0",
@@ -25,6 +26,7 @@
     "d3-shape": "^3.2.0",
     "expo": "53.0.9",
     "expo-auth-session": "~6.1.5",
+    "expo-font": "~13.3.1",
     "expo-linear-gradient": "~14.1.4",
     "expo-sqlite": "~15.2.10",
     "expo-status-bar": "~2.2.3",
@@ -43,8 +45,7 @@
     "react-native-svg": "15.11.2",
     "react-native-web": "^0.20.0",
     "react-native-webview": "13.13.5",
-    "@expo/ngrok": "^4.1.0",
-    "expo-font": "~13.3.1"
+    "rn-emoji-keyboard": "^1.7.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
