unstable home page and budget updated trnasction forms

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@react-navigation/native-stack": "^7.3.3",
     "d3-path": "^3.1.0",
     "d3-shape": "^3.2.0",
+    "eas-cli": "^16.6.1",
     "expo": "53.0.9",
     "expo-auth-session": "~6.1.5",
     "expo-font": "~13.3.1",
@@ -45,7 +46,9 @@
     "react-native-svg": "15.11.2",
     "react-native-web": "^0.20.0",
     "react-native-webview": "13.13.5",
-    "rn-emoji-keyboard": "^1.7.0"
+    "rn-emoji-keyboard": "^1.7.0",
+    "@expo/config-plugins": "~10.0.0",
+    "@expo/prebuild-config": "~9.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
